--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-
+    <h1>✨ Self Care Center ✨ </h1>
+    <h2>Which type of message?</h2>
+      <article class="selection-box">
+        <form>
+            <input type="radio" id="affirmation" name="message" value="affirmation">
+            <label for="affirmation">affirmation</label>
+            <input type="radio" id="mantra" name="message" value="mantra">
+            <label for="mantra">mantra</label>
+        </form>
+            <button class="receive-msg">Receive Message</button>
+      </article>
+      <article class="message-box">
+        <div class="display-message">
+          <img src="assets/meditate.svg" alt="Meditate bell">
+        </div>
+      </article>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
