Create user selection variables

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <input type="radio" id="mantra" name="message" value="mantra">
             <label for="mantra">mantra</label>
         </form>
-            <button class="receive-msg">Receive Message</button>
+            <button class="message-btn">Receive Message</button>
       </article>
       <article class="message-box">
         <div class="display-message">
