Add data.js file script tag to html

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
             <button class="message-btn">Receive Message</button>
       </article>
       <article class="message-box">
-        <div class="display-message">
+        <!-- <div class="message"> -->
           <img src="assets/meditate.svg" alt="Meditate bell">
-        </div>
+        <!-- </div> -->
       </article>
     <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="data.js"></script>
   </body>
 </html>
