--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>✨ Self Care Center ✨ </h1>
     <h2>Which type of message?</h2>
-      <article class="selection-box">
+      <section class="selection-box">
         <form>
             <input type="radio" id="affirmation" name="message" value="affirmation">
             <label for="affirmation">affirmation</label>
@@ -15,12 +15,12 @@
             <label for="mantra">mantra</label>
         </form>
             <button class="message-btn">Receive Message</button>
-      </article>
-      <article class="message-box">
-        <!-- <div class="message"> -->
+      </section>
+      <section class="message-box">
+        <article class="message">
           <img src="assets/meditate.svg" alt="Meditate bell">
-        <!-- </div> -->
-      </article>
+        </article>
+      </section>
     <script type="text/javascript" src="main.js"></script>
     <script type="text/javascript" src="data.js"></script>
   </body>
