Apply flexbox properties

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
               <button class="message-btn">Receive Message</button>
         </section>
         <section class="message box">
-          <article class="message">
+          <article class="message-display">
             <img src="assets/meditate.svg" alt="Meditate bell">
           </article>
         </section>
-    </main>  
+    </main>
     <script type="text/javascript" src="main.js"></script>
     <script type="text/javascript" src="data.js"></script>
   </body>
