Add clear button functionality

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img src="assets/meditate.svg" alt="Meditate bell">
           </article>
           <article class="clear-button hidden" id="button-display">
-            <button class="clear-btn">clear</button>
+            <button class="clear-btn" id="clear">clear</button>
           </article>
         </section>
     </main>
