Modify error message to display above button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
               <input type="radio" id="mantra" name="message" value="mantra">
               <label for="mantra">mantra</label>
           </form>
-              <button class="message-btn">Receive Message</button>
+            <p class ="error hidden" id="error">Oops! Please make selection.</p>
+            <button class="message-btn">Receive Message</button>
         </section>
         <section class="message box">
           <article class="display" id="message-display">
