Refactor error message function

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </section>
         <section class="message box">
           <article class="display" id="message-display">
-            <img src="assets/meditate.svg" alt="Meditate bell">
+            <img class="bell" src="assets/meditate.svg" alt="Meditate bell">
           </article>
           <article class="clear-button hidden" id="button-display">
             <button class="clear-btn" id="clear">clear</button>
