Update input box flex properties

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
               <input type="radio" id="mantra">
               <label for="mantra">mantra</label>
           </form>
-            <p class ="error hidden" id="error">Oops! Please make selection.</p>
+          <span class="submit">
+            <p class="error hidden" id="error">Oops! Please make selection.</p>
             <button class="message-btn" id="submit">Receive Message</button>
+          </span>
         </section>
         <section class="message box" id="message-box">
           <article class="display" id="message-display">
