Remove commented out code

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <section class="selection box">
           <form>
               <input type="radio" id="affirmation">
-              <label for="affirmation" class="option">affirmation</label>
+              <label for="affirmation">affirmation</label>
               <input type="radio" id="mantra">
-              <label for="mantra" class="option">mantra</label>
+              <label for="mantra">mantra</label>
           </form>
           <span class="submit">
             <p class="error hidden" id="error">Oops! Please make selection.</p>
