Remove unncessary HTML classes & reorganize CSS classes

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
           </span>
         </section>
         <section class="message box" id="message-box">
-          <article class="display" id="message-display">
+          <article id="message-display">
             <img class="bell" src="assets/meditate.svg" alt="Meditate bell">
           </article>
-          <article class="clear-button hidden" id="button-display">
+          <article class="hidden" id="button-display">
             <button class="clear-btn" id="clear">clear</button>
           </article>
         </section>
